# storion_aggregation_analysis

./: .gitignore  LICENSE  pyproject.toml
analysis/: data_preprocess.ipynb
analysis/1_content_filtering/: PROBLEM.md  trial_1.ipynb  trial_2.ipynb  trial_2.py
analysis/2_consolidation/: trial_1.ipynb  trial_2.ipynb  trial_2.py  trial_ideas.excalidraw
analysis/2_consolidation/scripts/: db_1.py  text_filteration.py
analysis/2_consolidation/scripts/trial_2/: text_filteration.py
analysis/consolidation/: trial_1.ipynb  trial_2.ipynb  trial_3.ipynb  trial_ideas.excalidraw
analysis/consolidation/scripts/: db_1.py  embeddings_trial1.py  embeddings_trial1_v2.py
