[tool.poetry]
name = "storion-aggregation-analysis"
version = "0.1.0"
description = ""
authors = ["Avin Divakara <67309607+AVDiv@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
